improve pagination to get all posts